# ClickerBack/ClickerBackBis/src/Controller/ApiUserController.php
@@ -2,7 +2,9 @@
 
 namespace App\Controller;
 
+use App\Entity\BasicResources;
 use App\Entity\User;
+use App\Repository\UserRepository;
 use Doctrine\ORM\EntityManagerInterface;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\Request;
@@ -27,7 +29,7 @@ class ApiUserController extends AbstractController
     }
 
     /**
-     * @Route("/api/user/slug/{slug_user}", name="api_user_slug", methods={"GET"})
+     * @Route("/api/user/slug/{slug}", name="api_user_slug", methods={"GET"})
      */
     public function showUserBySlug(User $user = null)
     {
@@ -43,25 +45,47 @@ class ApiUserController extends AbstractController
     /**
      * @Route("/api/user/create", name="api_user_create", methods={"POST"})
      */
-    public function createUser(EntityManagerInterface $entityManager, Request $request, UserPasswordHasherInterface $hasher)
+    public function createUser(UserRepository $userRepository ,EntityManagerInterface $entityManager, Request $request, UserPasswordHasherInterface $hasher)
     {
         $data = $request->getContent();
         $dataDecoded = json_decode($data);
-        // dd($request);
-        $newUser = new User;
 
-        $newUser->setNameUser($dataDecoded->nameUser);
-        $newUser->setEmail($dataDecoded->email);
-        $newUser->setPassword($dataDecoded->password);
-        $newUser->setRoles(["ROLE_USER"]);
+        $user = new User;
+        $user->setNameUser($dataDecoded->nameUser);
+        $user->setEmail($dataDecoded->email);
+        $user->setPassword($dataDecoded->password);
+        $user->setRoles(["ROLE_USER"]);
+        $password = $user->getPassword();
+        $passHasher = $hasher->hashPassword($user, $password);
+        $user->setPassword($passHasher);
 
-        $password = $newUser->getPassword();
-        $passHasher = $hasher->hashPassword($newUser, $password);
-        $newUser->setPassword($passHasher);
-
-        $entityManager->persist($newUser);
-        $entityManager->flush();
+        $entityManager->persist($user);
         
+
+        // $ore = ["Fer", "Cuivre", "Charbon", "Pierre", "Pétrole", "Eau"];
+        
+        // foreach($ore as $value){
+        //     $basicResources = new BasicResources;
+        //     $basicResources->setBasicResourcesName($value);
+        //     $basicResources->setBasicResourcesCount(0);
+        //     $basicResources->setBasicResourcesByClick(1);
+        //     $basicResources->setBasicResourcesByAutoIncrement(1);
+        //     if($value === "Fer" or $value === "Cuivre"){
+        //         $basicResources->setBasicResourcesStatus(true);
+        //     } else {
+        //         $basicResources->setBasicResourcesStatus(false);
+        //     }
+
+        //     $trueUser = $userRepository->find($request->request->get('user'));
+
+        //     $basicResources->addUser($trueUser);
+
+        //     $entityManager->persist($basicResources);
+            
+        // }
+
+        $entityManager->flush();
+
         return $this->json(
             [],
             Response::HTTP_CREATED,
